[tool.poetry]
name = "kaiwa-subnet"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "kaiwa_subnet" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
typer = "^0.9.0"
rich = "^13.7.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
communex = "^0.1.27.3"
httpx = "^0.27.0"
datasets = "^2.19.0"
loguru = "^0.7.2"
supervisor = "^4.2.5"
pylint = "^3.1.0"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
